--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,5 +1,6 @@
 cmake_minimum_required(VERSION 3.15)
 project(modern_cpp)
 SET (CMAKE_CXX_COMPILER "/usr/bin/clang++")
-set(CMAKE_EXPORT_COMPILE_COMMANDS ON)
+set (CMAKE_CXX_STANDARD 17)
+SET (CMAKE_EXPORT_COMPILE_COMMANDS ON)
 add_executable(main main.cpp)
