--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -3,6 +3,14 @@ project(modern_cpp)
 SET (CMAKE_CXX_STANDARD 17)
 add_executable(main main.cpp)
 add_subdirectory(includes)
+include(CTest)
+add_subdirectory(external)
+if (BUILD_TESTING)
+  add_executable(my_tests my_tests.cpp)
+  target_link_libraries(my_tests PRIVATE GTest::gtest_main)
+  include(GoogleTest)
+  gtest_discover_tests(my_tests)
+endif()
 target_include_directories(main PRIVATE includes)
 target_link_libraries(main PRIVATE libmodh)
 SET (CMAKE_CXX_COMPILER "/usr/bin/clang++")
